--- a/unpacked-extension/html/index.html
+++ b/unpacked-extension/html/index.html
@@ -20,6 +20,7 @@
         </div>
         <script src="../js/underscore.js"></script>
         <script src="../js/jquery.js"></script>
+        <script src="../js/jquery-ui.js"></script>
         <script src="../js/medium-editor.js"></script>
         <script src="../js/app.js"></script>
     </body>
