Add section button

--- a/unpacked-extension/html/index.html
+++ b/unpacked-extension/html/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <div class="sections"></div>
+        <div class="add-section"></div>
         <div class="drag-helper">
             <div class="message">Drag and drop...</div>
         </div>
