--- a/unpacked-extension/html/index.html
+++ b/unpacked-extension/html/index.html
@@ -22,6 +22,7 @@
         <script src="../js/jquery-ui.js"></script>
         <script src="../js/medium-editor.js"></script>
         <script src="../js/d3.js"></script>
+        <script src="../js/backbone.js"></script>
         <script src="../js/app.js"></script>
     </body>
 </html>
