Add text/header section types

--- a/unpacked-extension/html/index.html
+++ b/unpacked-extension/html/index.html
@@ -13,7 +13,10 @@
     </head>
     <body>
         <div class="sections"></div>
-        <div class="add-section"></div>
+        <div class="add">
+            <div class="add-section" data-type="text"></div>
+            <div class="add-section" data-type="header"></div>
+        </div>
         <div class="drag-helper">
             <div class="message">Drag and drop...</div>
         </div>
