Better button and caption styling

--- a/unpacked-extension/html/index.html
+++ b/unpacked-extension/html/index.html
@@ -14,8 +14,8 @@
     <body>
         <div class="sections"></div>
         <div class="add">
-            <div class="add-section" data-type="text"></div>
-            <div class="add-section" data-type="header"></div>
+            <div class="add-section button" data-type="text"></div><!--
+         --><div class="add-section button" data-type="header"></div>
         </div>
         <div class="drag-helper">
             <div class="message">Drag and drop...</div>
