--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <body>
         <div class="sections"></div>
         <div class="add">
-            <div class="add-section button" data-type="text"></div><!--
-         --><div class="add-section button" data-type="header"></div>
+            <div class="add-section"></div>
         </div>
         <div class="drag-helper">
             <div class="message">Drag and drop...</div>
